Name:              whiteout
Version:           0.1
Cabal-Version:     >= 1.2
License:           BSD3
License-File:      COPYING
Author:            Echo Nolan <echo@echonolan.net>
Homepage:          http://github.com/enolan/whiteout
Category:          Network
Synopsis:          A BitTorrent library.
Build-Type:        Simple

Flag Test
    Description:        Build the testsuite, i.e. runTests
    Default:            False

Library
    Build-depends:      array, base ==4.*, binary, bytestring, bytestring-show,
                        containers, directory == 1.*, filepath == 1.*,
                        HTTP == 4000.*, network == 2.*, parsec == 2.*,
                        SHA == 1.4.*, stm == 2.*
    Exposed-modules:    Network.Whiteout
    Other-modules:      Internal.BEncode, Internal.BEncode.Lexer,
                        Internal.Pieces, Internal.Types
    Hs-source-dirs:     src
    Ghc-options:        -Wall -fno-warn-name-shadowing
    Extensions:         OverloadedStrings, StandaloneDeriving

Executable runTests
    if flag(test)
        Buildable:          True
    else
        Buildable:          False
    Main-is:            Test/runTests.hs
    Build-depends:      array, base ==4.*, binary, bytestring, bytestring-show,
                        containers, directory == 1.*, filepath == 1.*,
                        HTTP == 4000.*, HUnit == 1.2.*, network == 2.*,
                        parsec == 2.*, QuickCheck == 2.*, SHA == 1.4.*,
                        stm == 2.*, test-framework, test-framework-hunit,
                        test-framework-quickcheck2
    Other-modules:      Internal.BEncode, Internal.BEncode.Lexer,
                        Internal.Pieces, Internal.Types, Network.Whiteout,
                        Test.Internal.BEncode, Test.Network.Whiteout
    Hs-source-dirs:     src
    Ghc-options:        -Wall -fno-warn-name-shadowing
    Extensions:         OverloadedStrings, StandaloneDeriving
