Name:               whiteout
Version:            0.0
Cabal-Version:      >= 1.2
License:            BSD3
License-File:       COPYING
Author:             Echo Nolan <echo@echonolan.net>
Homepage:           http://github.com/enolan/whiteout
Category:           Network
Synopsis:           A BitTorrent library.
Build-Type:         Simple
Tested-With:        GHC == 6.10.3
Extra-Source-Files: README

Flag Test
    Description:        Build the testsuite, i.e. runTests
    Default:            False

Library
    Build-depends:      array, base ==4.*, binary, bytestring, bytestring-show,
                        containers, directory == 1.*, filepath == 1.*,
                        iteratee == 0.2.*, HTTP >= 4000.0.5 && < 4000.1,
                        network == 2.*, network-bytestring == 0.1.*,
                        parsec == 2.*, random == 1.0.*, SHA == 1.4.*,
                        stm == 2.*, transformers == 0.1.*
    Exposed-modules:    Network.Whiteout
    Other-modules:      Internal.BEncode, Internal.BEncode.Lexer,
                        Internal.Peer, Internal.Peer.Messages, Internal.Pieces,
                        Internal.Types
    Hs-source-dirs:     src
    Ghc-options:        -Wall
    Extensions:         DeriveDataTypeable, OverloadedStrings,
                        ScopedTypeVariables

Executable runTests
    if !flag(test)
        Buildable:          False
    Main-is:            Test/runTests.hs
    Build-depends:      array, base ==4.*, binary, bytestring, bytestring-show,
                        containers, directory == 1.*, filepath == 1.*,
                        HTTP >= 4000.0.5 && < 4000.1, HUnit == 1.2.*,
                        network == 2.*, network-bytestring == 0.1.*,
                        parsec == 2.*, QuickCheck == 2.*, random == 1.0.*,
                        SHA == 1.4.*, stm == 2.*, test-framework,
                        test-framework-hunit, test-framework-quickcheck2
    Other-modules:      Internal.BEncode, Internal.BEncode.Lexer, Internal.Peer,
                        Internal.Peer.Messages, Internal.Pieces,
                        Internal.Types, Network.Whiteout,
                        Test.ArbitraryInstances, Test.Internal.BEncode,
                        Test.Internal.Peer.Messages, Test.Network.Whiteout
    Hs-source-dirs:     src
    Ghc-options:        -Wall
    Extensions:         DeriveDataTypeable, OverloadedStrings,
                        ScopedTypeVariables
